--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,38 @@
 # Base stage for common setup
 FROM python:3.11-slim-bullseye as base
 
-# Install build dependencies and Poetry in one step to minimize layers
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    && pip install --no-cache-dir poetry==1.6.1 \
-    && poetry config virtualenvs.create false \
-    && apt-get purge -y gcc \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+  gcc \
+  && rm -rf /var/lib/apt/lists/*
 
-# Set work directory
+RUN pip install poetry==1.6.1
+
+# Configuring poetry
+RUN poetry config virtualenvs.create false
+
+# Copying requirements of a project
+COPY pyproject.toml poetry.lock /app/
 WORKDIR /app
 
-# Copy only dependency files first (to leverage caching)
-COPY pyproject.toml poetry.lock /app/
+# Installing requirements
+RUN poetry install --only main
 
-# Install only main dependencies
-RUN poetry install --only main --no-root
+# Removing gcc
+RUN apt-get purge -y \
+  gcc \
+  && rm -rf /var/lib/apt/lists/*
 
-# Copy the rest of the application files
+# Copying the actual application, wait-for-it script, and prestart script
 COPY . /app/
 
-# Make necessary scripts executable
+# Note: We mount the local directory using docker-compose so ensure these scripts also have execute permissions
+# by running the following command on your host machine from the root of this project:
+# chmod +x ./backend/wait-for-it.sh ./backend/lcfs/prestart.sh ./backend/lcfs/start.sh ./backend/lcfs/start-reload.sh
+
+# Make all startup scripts executable
 RUN chmod +x /app/wait-for-it.sh /app/lcfs/prestart.sh /app/lcfs/start.sh
 
-# Default startup command
-CMD ["/bin/bash", "/app/lcfs/start.sh"]
+CMD /bin/bash /app/lcfs/start.sh
 
 # Production stage
 FROM base as prod
@@ -36,6 +43,5 @@ ENV APP_ENVIRONMENT=prod
 FROM base as dev
 # Set the APP_ENVIRONMENT variable to 'development'
 ENV APP_ENVIRONMENT=dev
-
 # Install additional dependencies for development
-RUN poetry install --no-root
+RUN poetry install
