--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -46,6 +46,7 @@ python-multipart = "^0.0.18"
 aio-pika = "^9.4.3"
 jinja2 = "^3.1.4"
 requests = "^2.32.3"
+pytest-xdist = "^3.6.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.3"
