Revert "parallelize tests"
This reverts commit 8d17b43df67e2289cbb7d932ecddb2a2182dec9b.

--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -61,7 +61,7 @@ jobs:
         continue-on-error: true
         run: |
           cd backend
-          poetry run pytest -n auto --junitxml=pytest-results.xml
+          poetry run pytest --junitxml=pytest-results.xml
         env:
           LCFS_DB_HOST: localhost
           LCFS_DB_PORT: 5432
