--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Modify docker-compose.yml
         run: |
+          sed -i 's/: true/: "true"/g; s/: false/: "false"/g' docker-compose.yml
           sed -i '/minio:/,/depends_on:/d' docker-compose.yml
           sed -i '/create_bucket:/,/depends_on:/d' docker-compose.yml
           sed -i '/frontend:/,/networks:/d' docker-compose.yml
@@ -58,7 +59,7 @@ jobs:
       - name: Build and start services
         run: |
           docker-compose build
-          docker-compose up -d db redis rabbitmq backend
+          docker-compose up -d
 
       - name: Run backend tests
         id: backend_tests
