--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Build and start services
         run: |
           docker-compose build
-          docker-compose up -d db redis rabbitmq backend
+          docker-compose up -d
 
       - name: Run backend tests
         id: backend_tests
