--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "material-ui-popup-state": "^5.0.10",
     "moment": "^2.30.1",
     "mui-daterange-picker-plus": "^1.0.4",
+    "notistack": "^3.0.1",
     "papaparse": "^5.4.1",
     "pretty-bytes": "^6.1.1",
     "quill": "^2.0.2",
