--- a/.github/workflows/test-ci.yaml
+++ b/.github/workflows/test-ci.yaml
@@ -19,9 +19,6 @@ jobs:
     outputs:
       cache-hit: ${{ steps.cache.outputs.cache-hit }}
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4.1.1
-
       - name: Set up cache for OpenShift CLI
         id: cache
         uses: actions/cache@v4.2.0
@@ -195,6 +192,12 @@ jobs:
       output1: ${{ steps.set-pre-release.outputs.PRE_RELEASE }}
 
     steps:
+      - name: Restore oc command from Cache
+        uses: actions/cache@v4.2.0
+        with:
+          path: /usr/local/bin/oc
+          key: oc-cli-${{ runner.os }}
+
       - name: Log in to Openshift
         uses: redhat-actions/oc-login@v1.3
         with:
