--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,8 +25,7 @@ jobs:
           - 6379:6379
       rabbitmq:
         image: rabbitmq:3-management
-        container_name: rabbitmq
-        environment:
+        env:
           RABBITMQ_DEFAULT_USER: lcfs
           RABBITMQ_DEFAULT_PASS: development_only
           RABBITMQ_DEFAULT_VHOST: lcfs
@@ -34,28 +33,68 @@ jobs:
           - "15672:15672"
     steps:
       - uses: actions/checkout@v2
+
       - name: Build and Run Backend Service
         run: |
-          docker build -t backend-service ./backend/Dockerfile
-          docker run -d --name backend -e LCFS_DB_HOST=localhost -e LCFS_REDIS_HOST=localhost -p 8000:8000 backend-service
+          docker build -t backend-service -f ./backend/Dockerfile ./backend
+          docker run -d --name backend \
+            --network=host \
+            -e LCFS_DB_HOST=localhost \
+            -e LCFS_REDIS_HOST=localhost \
+            backend-service
+
+      - name: Wait for DB to be Ready
+        run: |
+          for i in {1..30}; do
+            nc -z localhost 5432 && echo "DB is up" && break
+            echo "Waiting for DB..."
+            sleep 1
+          done
+
+      - name: Wait for Redis to be Ready
+        run: |
+          for i in {1..30}; do
+            nc -z localhost 6379 && echo "Redis is up" && break
+            echo "Waiting for Redis..."
+            sleep 1
+          done
+
+      - name: Wait for RabbitMQ to be Ready
+        run: |
+          for i in {1..30}; do
+            nc -z localhost 15672 && echo "RabbitMQ is up" && break
+            echo "Waiting for RabbitMQ..."
+            sleep 1
+          done
+
       - name: Data Seeding
         run: docker exec backend poetry run python /app/lcfs/db/seeders/seed_database.py
+
       - name: Build and Run Frontend Service
         run: |
-          docker build -t frontend-service ./fontend/Dockerfile.dev
-          docker run -d --name frontend -p 3000:3000 frontend-service
+          docker build -t frontend-service -f ./frontend/Dockerfile.dev ./frontend
+          docker run -d --name frontend \
+            --network=host \
+            frontend-service
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
           browser: chrome
           wait-on: 'http://localhost:3000'
           wait-on-timeout: 60
+          record: false
+          config-file: frontend/cypress.config.js  # Adjust if your config file is located elsewhere
+          working-directory: frontend
+          install: false  # Skip installing dependencies if managed by Docker
         env:
           IDIR_TEST_USER: ${{ secrets.CYPRESS_IDIR_TEST_USER }}
           IDIR_TEST_PASS: ${{ secrets.CYPRESS_IDIR_TEST_PASS }}
           BCEID_TEST_USER: ${{ secrets.CYPRESS_BCEID_TEST_USER }}
           BCEID_TEST_PASS: ${{ secrets.CYPRESS_BCEID_TEST_PASS }}
+
       - name: Cleanup
+        if: always()
         run: |
           docker stop backend frontend
           docker rm backend frontend
