--- a/openshift/templates/maintenance-page/maintenance-bc.yaml
+++ b/openshift/templates/maintenance-page/maintenance-bc.yaml
@@ -30,7 +30,7 @@ spec:
     contextDir: "openshift/templates/maintenance-page"
     git:
       uri: https://github.com/bcgov/lcfs.git
-      ref: master
+      ref: add-maintenance-page
   strategy:
     dockerStrategy:
       pullSecret:
