--- a/.github/workflows/prod-ci.yaml
+++ b/.github/workflows/prod-ci.yaml
@@ -146,6 +146,8 @@ jobs:
     name: Create release after prod deployment
     runs-on: ubuntu-latest
     needs: deploy-on-prod
+    env:
+      IMAGE_TAG: ${{ needs.get-image-tag.outputs.IMAGE_TAG }}
 
     steps:
       - name: Check out repository
