--- a/.github/workflows/prod-ci.yaml
+++ b/.github/workflows/prod-ci.yaml
@@ -145,7 +145,7 @@ jobs:
   create-release:
     name: Create release after prod deployment
     runs-on: ubuntu-latest
-    needs: deploy-on-prod
+    needs: [get-image-tag, deploy-on-prod]
     env:
       IMAGE_TAG: ${{ needs.get-image-tag.outputs.IMAGE_TAG }}
 
