--- a/.github/workflows/prod-ci.yaml
+++ b/.github/workflows/prod-ci.yaml
@@ -1,11 +1,10 @@
-
 name: LCFS 1.0.0 Prod CI
 
 on:
   workflow_dispatch:
 
 env:
-  GIT_URL: https://github.com/bcgov/lcfs.git 
+  GIT_URL: https://github.com/bcgov/lcfs.git
   TEST_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-test
   PROD_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-prod
 
@@ -26,7 +25,7 @@ jobs:
         id: cache
         uses: actions/cache@v4.2.0
         with:
-          path: /usr/local/bin/oc  # Path where the `oc` binary will be installed
+          path: /usr/local/bin/oc # Path where the `oc` binary will be installed
           key: oc-cli-${{ runner.os }}
 
       - name: Install OpenShift CLI (if not cached)
@@ -42,11 +41,10 @@ jobs:
 
   # Read the image tag from test environment
   get-image-tag:
-
     name: Get the image-tag from values-test.yaml
     runs-on: ubuntu-latest
     needs: [install-oc]
-  
+
     outputs:
       IMAGE_TAG: ${{ steps.get-image-tag.outputs.IMAGE_TAG }}
 
@@ -63,19 +61,19 @@ jobs:
         id: get-image-tag
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: |
-              imagetag=$(yq eval '.image.tag' lcfs/charts/lcfs-frontend/values-test.yaml)
-              echo "IMAGE_TAG retrieved from Test is $imagetag"
-              echo "IMAGE_TAG=$imagetag" >> $GITHUB_OUTPUT
+          cmd: |
+            imagetag=$(yq eval '.image.tag' lcfs/charts/lcfs-frontend/values-test.yaml)
+            echo "IMAGE_TAG retrieved from Test is $imagetag"
+            echo "IMAGE_TAG=$imagetag" >> $GITHUB_OUTPUT
 
   get-current-time:
     name: Get Current Time
     runs-on: ubuntu-latest
     needs: get-image-tag
-  
+
     outputs:
       CURRENT_TIME: ${{ steps.get-current-time.outputs.CURRENT_TIME }}
-    
+
     steps:
       - id: get-current-time
         run: |
@@ -84,7 +82,6 @@ jobs:
 
   # Deplog the image which is running on test to prod
   deploy-on-prod:
-
     name: Deploy LCFS on Prod
     runs-on: ubuntu-latest
     needs: [get-image-tag, get-current-time]
@@ -95,7 +92,6 @@ jobs:
       CURRENT_TIME: ${{ needs.get-current-time.outputs.CURRENT_TIME }}
 
     steps:
-
       - name: Checkout Manifest repository
         uses: actions/checkout@v3
         with:
@@ -110,7 +106,7 @@ jobs:
           approvers: AlexZorkin,kuanfandevops,hamed-valiollahi,airinggov,areyeslo,dhaselhan,Grulin
           minimum-approvals: 2
           issue-title: "LCFS ${{env.IMAGE_TAG }} Prod Deployment at ${{ env.CURRENT_TIME }}."
-          
+
       - name: Restore oc command from Cache
         uses: actions/cache@v4.2.0
         with:
@@ -133,10 +129,10 @@ jobs:
       - name: Update frontend tag for prod deployment
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: |
-              yq -i '.image.tag = "${{env.IMAGE_TAG }}"' lcfs/charts/lcfs-frontend/values-prod.yaml
-              yq -i '.image.tag = "${{env.IMAGE_TAG }}"' lcfs/charts/lcfs-backend/values-prod.yaml
-    
+          cmd: |
+            yq -i '.image.tag = "${{env.IMAGE_TAG }}"' lcfs/charts/lcfs-frontend/values-prod.yaml
+            yq -i '.image.tag = "${{env.IMAGE_TAG }}"' lcfs/charts/lcfs-backend/values-prod.yaml
+
       - name: GitHub Commit & Push
         run: |
           git config --global user.email "actions@github.com"
@@ -145,4 +141,32 @@ jobs:
           git add lcfs/charts/lcfs-backend/values-prod.yaml
           git commit -m "Update image tag ${{env.IMAGE_TAG }} for prod"
           git push
-              
+
+  create-release:
+    name: Create release after prod deployment
+    runs-on: ubuntu-latest
+    needs: [get-image-tag, deploy-on-prod]
+    env:
+      IMAGE_TAG: ${{ needs.get-image-tag.outputs.IMAGE_TAG }}
+
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4.1.1
+
+      - name: Fetch tags
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git fetch --tags
+          git tag -l
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Automatically provided by GitHub
+        with:
+          tag_name: ${{env.IMAGE_TAG }} # The pushed tag
+          release_name: "v${{ env.IMAGE_TAG }}" # Release title
+          body: "This is an automated release 🚀" # Release notes
+          draft: false # Set to true if you want a draft release
+          prerelease: false
