--- a/.github/workflows/test-ci.yaml
+++ b/.github/workflows/test-ci.yaml
@@ -253,7 +253,7 @@ jobs:
     name: Deploy LCFS on Test
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: [build]
+    needs: [set-pre-release, build]
 
     env:
       PRE_RELEASE: ${{ needs.set-pre-release.outputs.PRE_RELEASE }}
