--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "esbuild": "^0.25.0",
     "i18next": "^23.8.2",
     "keycloak-js": "^26.1.2",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.10",
     "mui-daterange-picker-plus": "^1.0.4",
