--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -17,13 +17,16 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Fetch All History
+        run: git fetch --unshallow
+
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v3.1.11
+        uses: gittools/actions/gitversion/setup@v4
         with:
           versionSpec: '6.0.x'
 
       - name: Determine Version
         id: version_step # step id used as reference for output values
-        uses: gittools/actions/gitversion/execute@v3.1.11
+        uses: gittools/actions/gitversion/execute@v4
         with:
           useConfigFile: true
