--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,10 +1,6 @@
-mode: Mainline # Uses a linear versioning strategy
+mode: Mainline
 branches:
-  main:
-    tag: "" # No extra tag, e.g., 1.2.3
-  develop:
-    tag: "beta" # Versions will be 1.2.3-beta.1
-  feature:
-    tag: "feature" # Versions will be 1.2.3-feature.1
-  release:
-    tag: "rc" # Versions will be 1.2.3-rc.1
+  master:
+    regex: ^latest$
+  pull-request:
+    tag: pr
