--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -14,9 +14,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Fetch All History
-        run: git fetch --unshallow
+        with:
+          fetch-depth: 0
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.1.11
