--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,16 +1,5 @@
+workflow: GitFlow/v1
+mode: ContinuousDelivery
 branches:
-  auto-versioning:
-    mode: ContinuousDelivery
-    label: alpha
-    increment: Minor
-    prevent-increment:
-      when-current-commit-tagged: false
-    track-merge-target: true
-    track-merge-message: true
-    source-branches:
-      - develop
-    is-source-branch-for: []
-    tracks-release-branches: true
-    is-release-branch: false
-    is-main-branch: false
-    pre-release-weight: 0
+  develop:
+    regex: ^auto-versioning$
