parse gitversion output

--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Show updated package.json
         run: |
-          cat frontend/package.json
+          head -n 30 frontend/package.json
