show git config

--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -27,6 +27,9 @@ jobs:
         with:
           useConfigFile: true
 
+      - name: Show GitVersion Config
+        run: gitversion /showconfig
+
       - name: Update package.json Version
         run: |
           # Extract fullSemVer from GitVersion JSON output
