show git config

--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -28,7 +28,7 @@ jobs:
           useConfigFile: true
 
       - name: Show GitVersion Config
-        run: gitversion /showconfig
+        run: which gitversion
 
       - name: Update package.json Version
         run: |
