show git config

--- a/.github/workflows/auto-versioning.yaml
+++ b/.github/workflows/auto-versioning.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Show GitVersion Config
         run: |
           pwd
-          ls /opt/hostedtoolcache/GitVersion.Tool
+          /opt/hostedtoolcache/GitVersion.Tool/6.0.5/dotnet-gitversion /showconfig
 
       - name: Update package.json Version
         run: |
